--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.6.12.Final</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.2.224</version>
+			<scope>runtime</scope>
+		</dependency>
 
 	</dependencies>
 
